<resources>
    <string name="app_name">优车会</string>
    <string name="information">个人资料</string>
    <string name="feedback">意见反馈</string>
    <string name="update">检查更新</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>

    <string name="login">登录</string>
    <string name="id_hint">手机号码</string>
    <string name="password_hint">密码</string>
    <string name="security_code">验证码</string>
    <string name="get_security_code">获取验证码</string>
    <string name="password_enter_hint">再次确认密码</string>
    <string name="register">注册</string>
    <string name="complete">完成</string>
    <string name="register_id"><u>注册账号</u></string>
    <string name="forget_password">忘记密码</string>
    <string name="modify_password">修改密码</string>
    <string name="forget_password_tips"><u>忘记密码？</u></string>
    <string name="register_tip">注册代表你已阅读并同意</string>
    <string name="agreement">优车会协议</string>

    <string name="about_us">关于我们</string>
    <string name="use_term">使用条款</string>
    <string name="privacy_policy">隐私政策</string>

</resources>
