<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:fitsSystemWindows="true" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="@string/id_hint"
                android:maxLength="11"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/id_hint"
                app:met_maxCharacters="11" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/password_hint"
                app:met_maxCharacters="20"
                app:met_minCharacters="6" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_enter_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/password_enter_hint"
                app:met_maxCharacters="20"
                app:met_minCharacters="6" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/security_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_vercode"
                    android:drawablePadding="10dp"
                    android:hint="@string/security_code"
                    android:inputType="number"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/security_code" />

                <TextView
                    android:id="@+id/get_security_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/get_security_code"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_selector"
                android:text="@string/complete"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>