<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/pic_mine_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:text="温温温888"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_above="@id/user_name"
            android:layout_marginBottom="16dp"
            android:src="@drawable/flash" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/text_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_personal"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/information"
            android:textColor="@color/color21"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/text_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_feedback"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/feedback"
            android:textColor="@color/color21"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/text_selector"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_update"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/update"
                android:textColor="@color/color21"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="当前版本v1.0"
                android:textColor="@color/color999"
                android:textSize="11sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorEEE" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/text_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/icon_about"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/about"
            android:textColor="@color/color21"
            android:textSize="13sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorEEE" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_selector"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_exit"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/exit"
        android:textColor="@color/color21"
        android:textSize="13sp" />

</LinearLayout>
