<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fitsSystemWindows="true" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/about_us"
            android:textColor="@color/color666"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorEEE" />

        <TextView
            android:id="@+id/use_term"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/use_term"
            android:textColor="@color/color666"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorEEE" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/color666"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorEEE" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>